# Marine_prediction_GPU_iTransformers_GraphGPT

./: .gitignore  01_prepare_data.py  02_train_itransformer_118days.py  02_train_itransformer_2day.py  03_visualize_results.py  04_train_hpmixer_118days.py  05_compare_models.py  06_interim_comparison.py  07_final_comparison_clean.py  08_train_all_horizons_14x.py  09_train_110days_forecast_10days.py  10day_forecast_report.html  13_conv1d_channel_mixer.py  14_model_comparison_report.py  15_chronos2_finetuned.py  16_nbeats_multivariate.py  17_hybrid_8model_nbeats.py  18_mtgnn_marine.py  19_hybrid_8model_mtgnn.py  20_correlated_input_mtgnn.py  21_hybrid_physics_ml.py  22_physics_ml_hybrid_correction.py  23_improved_correlated_mtgnn.py  23_timexer_marine_120days.py  23_timexer_marine_efficient.py  24_residual_correction_stacking.py  24_timexer_vs_mtgnn_comparison.py  25_itransformer_efficient.py  25_itransformer_marine_120days.py  25_unified_mtgnn_12params.py  30_all_models_marine.py  31_final_model_comparison.py  32_quick_results.py  33_proper_training.py  34_with_timexer.py  AARDVARK_WEATHER_ANALYSIS.md  ADVANCED_ATMOSPHERIC_MODELS_COMPARISON.md  AIFS_ACTIVATION_GUIDE.md  AIFS_IMPLEMENTATION_COMPLETE.md  AIFS_READY_FOR_DEPLOYMENT.md  (+210 more)
marine_local_mtgnn/: .gitignore  README.md  pyproject.toml  requirements.txt
marine_local_mtgnn/configs/: local_15min_7day.yaml
marine_local_mtgnn/src/marine_local_mtgnn/: __init__.py  (+5 more)
marine_local_mtgnn/tests/: __init__.py  test_baselines.py  test_data_pipeline.py  test_datasets.py  test_evaluation.py  test_mtgnn.py  test_schema.py  test_training.py  test_transforms.py
portland_itransformer/: MTGNN_vs_ITRANSFORMER.md  PHASE_2A_COMPLETE.md  PHASE_2B_COMPLETE.md  PHASE_3_READINESS_CHECKLIST.md  PROJECT_SUMMARY.md  README.md  REMEDIATION_PLAN.md  TRAINING_RESULTS.md  calc_skill_all_18params.py  calc_skill_by_param.py  compute_skills.py  pyproject.toml  requirements.txt  run_training.py  train_atmosphere.py  train_atmosphere_timexer.py  train_marine.py  train_unified.py
portland_itransformer/artifacts/: clearsky_metadata.json  known_columns_atmosphere.json  scaling_metadata.json  target_columns_atmosphere.json  target_columns_marine.json
portland_itransformer/configs/: atmosphere_24h.yaml  atmosphere_timexer.yaml  marine_24h.yaml  portland_7day.yaml  unified_22param.yaml
portland_itransformer/outputs/: test_metrics_overall.txt  training_history.json
(+104 files in other folders)
