[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marine-local-mtgnn"
version = "0.1.0"
description = "Local-only MTGNN residual forecaster for marine buoy prediction"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Marine Prediction Team", email = "sathyavemuri@gmail.com"},
]
license = {text = "MIT"}

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16",
    "scipy>=1.12",
    "scikit-learn>=1.5",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "joblib>=1.4",
    "tqdm>=4.66",
    "rich>=13.7",
    "utide>=0.3",
    "pvlib>=0.10",
    "gsw>=3.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "matplotlib>=3.8",
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
marine-local-mtgnn = "marine_local_mtgnn.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
