[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portland_itransformer"
version = "0.1.0"
description = "iTransformer-based marine forecasting for Portland Harbor"
authors = [
    {name = "Marine Forecasting Team", email = "team@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16",
    "scipy>=1.12",
    "scikit-learn>=1.5",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "joblib>=1.4",
    "tqdm>=4.66",
    "rich>=13.7",
    "utide>=0.3",
    "pvlib>=0.10",
    "gsw>=3.6",
    "matplotlib>=3.8",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
